minor formatting errors and fix for java 17 in script files