@@ -16,8 +16,11 @@ done
 for JAR in $GNOMEX_LIB/*.jar
 do
 CLASSPATH="$CLASSPATH:$JAR"
-
 done
+
 export CLASSPATH
 
-java hci.gnomex.daemon.PendingWorkAuthd $*
+JAVA_OPTS="--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.text=ALL-UNNAMED --add-opens java.desktop/java.awt.font=ALL-UNNAMED"
+export JAVA_OPTS
+
+java $JAVA_OPTS hci.gnomex.daemon.PendingWorkAuthd $*
